--- a/TnTComponents/Styles/Components/forms/_form.scss
+++ b/TnTComponents/Styles/Components/forms/_form.scss
@@ -16,6 +16,7 @@
 @import '_checkbox.scss';
 @import '_datetimepicker.scss';
 @import '_dropdown.scss';
+@import '_inputfile.scss';
 @import '_numeric.scss';
 @import '_radiogroup.scss';
 @import '_switch.scss';
