--- a/TnTComponents/Styles/Components/forms/_form.default_theme.scss
+++ b/TnTComponents/Styles/Components/forms/_form.default_theme.scss
@@ -12,6 +12,7 @@
 @import '_checkbox.default_theme.scss';
 @import '_datetimepicker.default_theme.scss';
 @import '_dropdown.default_theme.scss';
+@import '_inputfile.default_theme.scss';
 @import '_numeric.default_theme.scss';
 @import '_radiogroup.default_theme.scss';
 @import '_switch.default_theme.scss';
