--- a/TnTComponents/Forms/TnTCheckbox.razor
+++ b/TnTComponents/Forms/TnTCheckbox.razor
@@ -2,7 +2,7 @@
 
 
 <div theme="@Theme" class="@GetCssClass()">
-    @TnTIconComponent.GetIcon(IconType, Icon)
+    @TnTIconComponent.RenderIcon(IconType, Icon)
     <label class="@GetLabelCssClass()">
         <input @attributes="AdditionalAttributes"
                aria-label="@Label"
