--- a/TnTComponents/Forms/TnTNumeric.razor
+++ b/TnTComponents/Forms/TnTNumeric.razor
@@ -2,7 +2,7 @@
 @inherits TnTInputField<TNumberType>
 
 <div theme="@Theme" class="@GetCssClass()">
-    @TnTIconComponent.GetIcon(IconType, Icon)
+    @TnTIconComponent.RenderIcon(IconType, Icon)
     <input aria-label="@Label"
            name="@NameAttributeValue"
            disabled="@Disabled"
