--- a/TnTComponents/Forms/TnTPasswordBox.razor
+++ b/TnTComponents/Forms/TnTPasswordBox.razor
@@ -1,7 +1,7 @@
 ﻿@inherits TnTTextBox
 
 <div theme="@Theme" class="@GetCssClass()">
-    @TnTIconComponent.GetIcon(IconType, Icon)
+    @TnTIconComponent.RenderIcon(IconType, Icon)
     <input aria-label="@Label"
            type="@(PasswordRevealed ? "text" : "password")"
            name="@NameAttributeValue"
