--- a/TnTComponents/Forms/TnTRadioButton.razor
+++ b/TnTComponents/Forms/TnTRadioButton.razor
@@ -2,7 +2,7 @@
 @inherits TnTBaseComponent
 
 <div class="@GetCssClass()">
-    @TnTIconComponent.GetIcon(IconType, Icon)
+    @TnTIconComponent.RenderIcon(IconType, Icon)
     <input aria-label="@Label"
            id="@_id"
            type="radio"
