--- a/LiveTest/LiveTest/Components/App.razor
+++ b/LiveTest/LiveTest/Components/App.razor
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="LiveTest.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link rel="stylesheet" href="_content/TnTComponents/style.css" />
-    <link rel="stylesheet" href="_content/TnTComponents/style.dark.min.css" media="(prefers-color-scheme: dark)" />
-    <link rel="stylesheet" href="_content/TnTComponents/style.light.min.css" media="not (prefers-color-scheme: dark)" />
+     <link rel="stylesheet" href="_content/TnTComponents/variables.min.css" />
+    <link rel="stylesheet" href="_content/TnTComponents/style.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <HeadOutlet />
