Added segmented button

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -10,7 +10,7 @@
         <TnTSideNavList>
             <TnTSideNavListItem Icon="home" Label="Home" Href="/" Match="NavLinkMatch.All" />
             <TnTSideNavListItem Icon="business" Label="Buttons" Href="Buttons" />
-            <TnTSideNavListItem Icon="add_circle" Label="Counter" Href="counter" />
+            <TnTSideNavListItem Icon="add_circle" Label="Segmented Buttons" Href="segmentedButton" />
             <TnTSideNavListItem Label="Weather" Href="weather" />
         </TnTSideNavList>
     </SideNav>
