--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -11,6 +11,7 @@
             <TnTSideNavListItem Icon="home" Label="Home" Href="/" Match="NavLinkMatch.All" />
             <TnTSideNavListItem Icon="business" Label="Buttons" Href="Buttons" />
             <TnTSideNavListItem Icon="add_circle" Label="Segmented Buttons" Href="segmentedButton" />
+            <TnTSideNavListItem Icon="search" Label="Cards" Href="card" />
             <TnTSideNavListItem Label="Weather" Href="weather" />
         </TnTSideNavList>
     </SideNav>
