--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -3,7 +3,7 @@
 //@import 'Common/_grid.scss';
 //@import 'Components/_body.scss';
 @import 'Components/_buttons.scss';
-//@import 'Components/_card.scss';
+@import 'Components/_card.scss';
 //@import 'Components/_dialogcontainer.scss';
 //@import 'Components/_grid.scss';
 //@import 'Components/_header.scss';
@@ -27,3 +27,7 @@
 //        width: 0px;
 //    }
 //}
+
+html, body {
+    background-color: $tnt-color-background;
+}
