--- a/TnTComponents/Styles/variables.scss
+++ b/TnTComponents/Styles/variables.scss
@@ -53,8 +53,12 @@
     --tnt-color-tertiary100: #ffffff;
     /* neutral */
     --tnt-color-neutral0: #000000;
+    --tnt-color-neutral4: #0f0d13;
     --tnt-color-neutral10: #1d1b1e;
+    --tnt-color-neutral12: #211f26;
+    --tnt-color-neutral17: #2b2930;
     --tnt-color-neutral20: #322f33;
+    --tnt-color-neutral22: #36343b;
     --tnt-color-neutral25: #3d3a3e;
     --tnt-color-neutral30: #49464a;
     --tnt-color-neutral35: #555155;
@@ -73,13 +77,9 @@
     --tnt-color-neutral100: #ffffff;
     /* neutral-variant */
     --tnt-color-neutral-variant0: #000000;
-    --tnt-color-neutral-variant4: #0f0d13;
     --tnt-color-neutral-variant10: #1e1a22;
-    --tnt-color-neutral-variant12: #211f26;
     --tnt-color-neutral-variant15: #28242c;
-    --tnt-color-neutral-variant17: #2b2930;
     --tnt-color-neutral-variant20: #332f37;
-    --tnt-color-neutral-variant22: #36343b;
     --tnt-color-neutral-variant25: #3e3a42;
     --tnt-color-neutral-variant30: #4a454e;
     --tnt-color-neutral-variant35: #56505a;
