--- a/TnTComponents/TnTSegmentedButton.razor
+++ b/TnTComponents/TnTSegmentedButton.razor
@@ -1,5 +1,5 @@
 ﻿@inherits TnTComponentBase
 
-<div class="@GetClass()">
+<div @attributes="AdditionalAttributes" class="@GetClass()" theme="@Theme" style="@Style">
     @ChildContent
 </div>
